# mugbot

./: README.md  pyproject.toml  requirements.txt
mugbot/: mugbot.py
